@@ -209,7 +209,7 @@ PackageInfoURL  := Concatenation( ~.PackageWWWHome, "/PackageInfo.g" ),
 ArchiveURL      := Concatenation( ~.SourceRepository.URL,
                                  "/releases/download/v", ~.Version,
                                  "/", ~.PackageName, "-", ~.Version ),
-ArchiveFormats := ".tar.gz",
+ArchiveFormats := [".tar.gz", ".zip"],
 
 
 
